completed ruby interpreter Makefile

--- a/ruby-build/Makefile
+++ b/ruby-build/Makefile
@@ -1,4 +1,6 @@
-.PHONY: fetch openssl ruby
+.PHONY: fetch openssl ruby zips clean mrproper
+
+RELEASE=3
 
 OPENSSL_VERSION = 1.0.1e
 RUBY_RELEASE = 2.0
@@ -6,11 +8,27 @@ RUBY_VERSION = 2.0.0-p195
 
 TOPDIR=$(shell pwd)
 
+zips: ruby_r$(RELEASE).zip ruby_extras_r$(RELEASE).zip
+
 fetch: .fetch.done
 
 openssl: .openssl.done
 
 ruby: .ruby.done
+
+clean:
+	rm -rf extras
+	rm -rf interpreter
+	rm -rf rubyroot
+	rm -rf openssl-$(OPENSSL_VERSION)
+	rm -rf ruby-$(RUBY_VERSION)
+	rm -f .*.done
+
+mrproper: clean
+	rm -f openssl-$(OPENSSL_VERSION).tar.gz
+	rm -f ruby-$(RUBY_VERSION).tar.bz2
+	rm -f ruby_r$(RELEASE).zip
+	rm -f ruby_extras_r$(RELEASE).zip
 
 .fetch.done:
 	wget -c http://www.openssl.org/source/openssl-$(OPENSSL_VERSION).tar.gz
@@ -40,4 +58,23 @@ ruby: .ruby.done
 	find rubyroot -name *.so -exec arm-linux-androideabi-strip {} \;
 	arm-linux-androideabi-strip rubyroot/bin/ruby
 	> .ruby.install.done
+
+ruby_r$(RELEASE).zip: .ruby.install.done
+	rm -rf interpreter
+	mkdir -p interpreter/ruby
+	mkdir -p interpreter/ruby/bin
+	cp rubyroot/bin/ruby interpreter/ruby/bin
+	cp rubyroot/bin/irb interpreter/ruby/bin
+	mkdir -p interpreter/ruby/lib/ruby/2.0.0
+	cp -r rubyroot/lib/ruby/2.0.0/arm-linux-androideabi interpreter/ruby/lib/ruby/2.0.0
+	cp openssl-$(OPENSSL_VERSION)/lib*.so* interpreter/ruby/lib
+	(cd interpreter && zip -r ../ruby_r$(RELEASE).zip ruby)
+
+ruby_extras_r$(RELEASE).zip: .ruby.install.done
+	rm -rf extras
+	mkdir -p extras/ruby
+	mkdir -p extras/ruby/lib/ruby/2.0.0
+	cp -r rubyroot/lib/ruby/2.0.0/* extras/ruby/lib/ruby/2.0.0
+	rm -rf extras/ruby/lib/ruby/2.0.0/arm-linux-androideabi
+	(cd extras && zip -r ../ruby_extras_r$(RELEASE).zip ruby)
 
